--- a/st_mgt/templates/faculty/faculty_list.html
+++ b/st_mgt/templates/faculty/faculty_list.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
 </head>
 <body>
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li> <!-- This will print when user creation is successful-->
+        {% endfor %}
+    </ul>
+    {% endif %}
     <h1>Faculty List</h1>
 
     <form method="GET" action="">
@@ -37,6 +44,15 @@
             <tr><td colspan="5">No faculty found.</td></tr>
         {% endfor %}
     </table>
+
+    <div class="creation-form">
+        <h2>Create New Faculty</h2>
+        <form method="POST">
+            {% csrf_token %}
+            {{ faculty_form.as_p }}
+            <button type="submit" name="create_faculty">Create Faculty</button>
+        </form>
+    </div>
 
     <div class="back-link-container">
         <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to Admin Dashboard</a>
