--- a/st_mgt/templates/users/admin_dashboard.html
+++ b/st_mgt/templates/users/admin_dashboard.html
@@ -19,13 +19,23 @@
     <div id="welcome">
         Greetings : {{ request.user.first_name }} {{ request.user.last_name }} ({{ request.user.username }})
     </div>
-    <nav id="profile_menu">
-        <div class="topmenu">
-            <a href="{% url 'student_list' %}">Manage Students</a>
-            <a href="{% url 'faculty_list' %}">Manage Faculty</a>
-            <a href="{% url 'task_list' %}">Manage Tasks</a>
-            <a href="{% url 'course_list' %}">Manage Courses</a>
-            <a href="{% url 'logout' %}">Logout</a>
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="{% url 'admin_dashboard' %}" class="navbar-brand">Student Management System</a>
+            <div class="navbar-toggle" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="navbar-menu">
+                <a href="{% url 'admin_dashboard' %}">Dashboard</a>
+                <a href="{% url 'student_list' %}"class="active">Students</a>
+                <a href="{% url 'faculty_list' %}">Faculty</a>
+                <a href="{% url 'course_list' %}">Courses</a>
+            </div>
+            <div class="user-info">
+                <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
+            </div>
         </div>
     </nav>
   <section id="Summary">
@@ -131,6 +141,12 @@
             });
         });
     </script>
+        <script>
+            function toggleMenu() {
+                const menu = document.querySelector('.navbar-menu');
+                menu.classList.toggle('active');
+            }   
+        </script>
     </body>
 
 </html>
