--- a/st_mgt/templates/students/student_list.html
+++ b/st_mgt/templates/students/student_list.html
@@ -32,6 +32,7 @@
                 <a href="{% url 'student_list' %}"class="active">Students</a>
                 <a href="{% url 'faculty_list' %}">Faculty</a>
                 <a href="{% url 'course_list' %}">Courses</a>
+                <a href="{% url 'task_list' %}">Tasks</a>
             </div>
             <div class="user-info">
                 <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
