--- a/st_mgt/templates/users/admin_dashboard.html
+++ b/st_mgt/templates/users/admin_dashboard.html
@@ -16,9 +16,7 @@
                 {% endfor %}
             </ul>
         {% endif %}
-    <div id="welcome">
-        Greetings : {{ request.user.first_name }} {{ request.user.last_name }} ({{ request.user.username }})
-    </div>
+
     <nav class="navbar">
         <div class="navbar-container">
             <a href="{% url 'admin_dashboard' %}" class="navbar-brand">Student Management System</a>
@@ -28,16 +26,20 @@
                 <span></span>
             </div>
             <div class="navbar-menu">
-                <a href="{% url 'admin_dashboard' %}">Dashboard</a>
-                <a href="{% url 'student_list' %}"class="active">Students</a>
+                <a href="{% url 'admin_dashboard' %}"class="active">Dashboard</a>
+                <a href="{% url 'student_list' %}">Students</a>
                 <a href="{% url 'faculty_list' %}">Faculty</a>
                 <a href="{% url 'course_list' %}">Courses</a>
+                <a href="{% url 'task_list' %}">Tasks</a>
             </div>
             <div class="user-info">
                 <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
             </div>
         </div>
     </nav>
+    <div id="welcome">
+        Greetings : {{ request.user.first_name }} {{ request.user.last_name }} ({{ request.user.username }})
+    </div>
   <section id="Summary">
     <h2>Summary</h1>
 
