--- a/st_mgt/templates/courses/course_list.html
+++ b/st_mgt/templates/courses/course_list.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Manage Courses</title>
+    {% csrf_token %}
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 </head>
@@ -87,7 +88,7 @@
             <td>{{ course.code }}</td>
             <td>{{ course.level }}</td>
             <td>
-                <a href="{% url 'delete_course' course.id %}" class="delete-link">Delete</a>
+                <button type="button" class="delete-button" data-course-id="{{ course.id }}">Delete</button>
             </td>
         </tr>
         {% empty %}
@@ -101,6 +102,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'js/delete_manage.js' %}"></script>
     <script>
         $(document).ready(function() {
             $('.select2').select2({
@@ -110,11 +112,11 @@
             });
         });
     </script>
-        <script>
-            function toggleMenu() {
-                const menu = document.querySelector('.navbar-menu');
-                menu.classList.toggle('active');
-            }   
-        </script>
+    <script>
+        function toggleMenu() {
+            const menu = document.querySelector('.navbar-menu');
+            menu.classList.toggle('active');
+        }   
+    </script>
 </body>
 </html>
