--- a/st_mgt/templates/faculty/faculty_list.html
+++ b/st_mgt/templates/faculty/faculty_list.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="{% static 'js/faculty_list.js' %}"></script>
+    {% csrf_token %}
 </head>
 <body>
     <nav class="navbar">
