--- a/st_mgt/templates/students/student_list.html
+++ b/st_mgt/templates/students/student_list.html
@@ -32,6 +32,7 @@
                 <a href="{% url 'student_list' %}"class="active">Students</a>
                 <a href="{% url 'faculty_list' %}">Faculty</a>
                 <a href="{% url 'course_list' %}">Courses</a>
+                <a href="{% url 'task_list' %}">Tasks</a>
             </div>
             <div class="user-info">
                 <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
@@ -47,10 +48,6 @@
     {% endif %}
 
     <h1>Student List</h1>   
-    <form method="GET" action="">           
-        <input type="text" name="q" placeholder="Search students..." value="{{ q }}">
-        <button type="submit">Search</button>
-    </form>
     <div class="search-container">
         <form method="GET" action="" class="search-form">
             <input type="text" name="q" placeholder="Search students by name, username, or roll number..." value="{{ q }}" class="search-input">
