--- a/st_mgt/templates/courses/course_list.html
+++ b/st_mgt/templates/courses/course_list.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Manage Courses</title>
+    {% csrf_token %}
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 </head>
@@ -18,9 +19,10 @@
             </div>
             <div class="navbar-menu">
                 <a href="{% url 'admin_dashboard' %}">Dashboard</a>
-                <a href="{% url 'student_list' %}"class="active">Students</a>
+                <a href="{% url 'student_list' %}">Students</a>
                 <a href="{% url 'faculty_list' %}">Faculty</a>
-                <a href="{% url 'course_list' %}">Courses</a>
+                <a href="{% url 'course_list' %}" class="active">Courses</a>
+                <a href="{% url 'task_list' %}">Tasks</a>
             </div>
             <div class="user-info">
                 <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
@@ -110,7 +112,7 @@
             <td>{{ course.code }}</td>
             <td>{{ course.level }}</td>
             <td>
-                <a href="{% url 'delete_course' course.id %}" class="delete-link">Delete</a>
+                <button type="button" class="delete-button" data-course-id="{{ course.id }}">Delete</button>
             </td>
         </tr>
         {% empty %}
@@ -124,6 +126,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'js/delete_manage.js' %}"></script>
     <script>
         $(document).ready(function() {
             $('.select2').select2({
@@ -133,11 +136,11 @@
             });
         });
     </script>
-        <script>
-            function toggleMenu() {
-                const menu = document.querySelector('.navbar-menu');
-                menu.classList.toggle('active');
-            }   
-        </script>
+    <script>
+        function toggleMenu() {
+            const menu = document.querySelector('.navbar-menu');
+            menu.classList.toggle('active');
+        }   
+    </script>
 </body>
 </html>
