--- a/st_mgt/templates/faculty/faculty_list.html
+++ b/st_mgt/templates/faculty/faculty_list.html
@@ -4,6 +4,11 @@
 <head>
     <title>Faculty List</title>
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'js/faculty_list.js' %}"></script>
+    {% csrf_token %}
 </head>
 <body>
     <nav class="navbar">
@@ -16,9 +21,10 @@
             </div>
             <div class="navbar-menu">
                 <a href="{% url 'admin_dashboard' %}">Dashboard</a>
-                <a href="{% url 'student_list' %}"class="active">Students</a>
-                <a href="{% url 'faculty_list' %}">Faculty</a>
+                <a href="{% url 'student_list' %}">Students</a>
+                <a href="{% url 'faculty_list' %}" class="active">Faculty</a>
                 <a href="{% url 'course_list' %}">Courses</a>
+                <a href="{% url 'task_list' %}">Tasks</a>
             </div>
             <div class="user-info">
                 <a href="{% url 'logout' %}" class="logout-btn">Logout</a>
@@ -28,7 +34,7 @@
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li> <!-- This will print when user creation is successful-->
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
         {% endfor %}
     </ul>
     {% endif %}
@@ -76,12 +82,6 @@
     <div class="back-link-container">
         <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to Admin Dashboard</a>
     </div>
-    <script>
-        function toggleMenu() {
-            const menu = document.querySelector('.navbar-menu');
-            menu.classList.toggle('active');
-        }   
-    </script>
 </body>
 </html>
   
