--- a/st_mgt/templates/faculty/manage_faculty.html
+++ b/st_mgt/templates/faculty/manage_faculty.html
@@ -4,21 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Manage Faculty</title>
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <link rel="stylesheet" href="{% static 'css/admin_styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="{% static 'js/admin_scripts.js' %}"></script>
     <script src="{% static 'js/faculty_manage.js' %}"></script>
-    <script>
-        $(document).ready(function() {
-            $('.select2').select2({
-                placeholder: "Search and select a course...",
-                allowClear: true,
-                width: '100%'
-            });
-        });
-    </script>
+    <script src="{% static 'js/delete_manage.js' %}"></script>
 </head>
 <body>
     {% if messages %}
@@ -70,14 +63,23 @@
             <button type="submit" name="submit_course">Assign Course</button>
         </form>
 
-        <form method="POST" action="{% url 'delete_faculty' faculty.id %}">
-            {% csrf_token %}
-            <button type="submit" class="delete-button">Delete Faculty</button>
-        </form>
+        <div class="delete-container">
+            <button type="button" class="delete-button" data-faculty-id="{{ faculty.id }}">Delete</button>
+        </div>
 
         <div class="back-link-container">
             <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin_dashboard</a>
         </div>
     </div>
+
+    <script>
+        $(document).ready(function() {
+            $('.select2').select2({
+                placeholder: "Search and select a course...",
+                allowClear: true,
+                width: '100%'
+            });
+        });
+    </script>
 </body>
 </html>
