--- a/st_mgt/static/css/admin_styles.css
+++ b/st_mgt/static/css/admin_styles.css
@@ -722,10 +722,11 @@ table a:hover {
     border: 1px solid #ddd;
     border-radius: 4px;
     font-size: 14px;
+    
 }
 
 .search-button {
-    padding: 8px 16px;
+    padding: 10px 16px;
     background-color: #007bff;
     color: white;
     border: none;
@@ -747,6 +748,16 @@ table a:hover {
 
 .clear-search:hover {
     background-color: #545b62;
+}
+
+.search-form button, .search-form a {
+    height: 55px; /* make both buttons same height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
+    font-size: 14px;
+    border-radius: 5px;
 }
 
 .student-list-container {
